<resources>
    <string name="app_name">Biometric IoT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Biometric IoT</string>
    <string name="nav_header_subtitle">Departamento ICT HN\nAgroindustrias Diadema Zona Franca Honduras S.A.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_doors">Puertas</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="todo">TODO</string>
    <string name="facebook_app_id">YOUR_APP_ID</string>
    <string name="fb_login_protocol_scheme">YOUR_THING</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="indicaciones">Por favor ingrese su usuario y clave.</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="ingresar">Ingresar</string>
    <string name="err_email">Ingrese una dirección de correo válida.</string>
    <string name="err_password">Mínimo 8 caracteres.</string>
    <string name="bloqueo">Bloqueo</string>
    <string name="deshabilitado">Deshabilitado</string>
    <string name="salir">Salir</string>
    <string name="tipo">Tipo:</string>
    <string name="departamento">Departamento:</string>
    <string name="fecha_inicial">Fecha inicial:</string>
    <string name="fecha_final">Fecha final:</string>
    <string name="sesion">Sesión</string>
    <string name="nombre_de_puerta">Nombre de puerta</string>
    <string name="abrir">Abrir</string>
    <string name="ssid">\"Davidoff-Corp\"</string>
    <string name="ssid1">\"ISG\"</string>
    <string name="no_wifi">Conectese a la red Wifi.</string>
    <string name="no_coorporativa">Conectese a la red Wifi Coorporativa.</string>
    <string name="sin_internet">Sin internet.</string>
    <string name="sin_puertas">Sin existencia de puertas.</string>
    <string name="sin_respuesta">Por favor intente en otro momento.</string>
    <string name="error_500">Internal Server Error</string>
    <string name="deformed_data">No se pudo procesar la data. Notifique al soporte de ICT.</string>
    <string name="no_te_emociones">No te emociones</string>
    <string name="buscador">Buscador</string>
    <string name="title_list_doors">Lista de puertas</string>
    <string name="fuera_de_servicio">La generación de reportes esta fuera de servicio.\n\nPuede seguir usando las demas funcionalidades.</string>
    <string name="doors">Puertas</string>
    <string name="desc_doors">Muestra los dispositivos biométricos que están conectados a una puerta.</string>
    <string name="reports">Reportes</string>
    <string name="desc_reports">Ver los reportes de asistencia por día o rango de fechas.</string>
    <string name="sin_registros">Sin registros.</string>

</resources>
